@@ -147,10 +147,10 @@ val advanced_display_preferences =
     "Show leading question mark of variable name"];
 
 val tracing_preferences =
- [bool_pref trace_simp_default
+ [bool_pref simp_trace_default
     "trace-simplifier"
     "Trace simplification rules.",
-  nat_pref trace_simp_depth_limit
+  nat_pref simp_trace_depth_limit
     "trace-simplifier-depth"
     "Trace simplifier depth limit.",
   bool_pref trace_rules
